--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,7 @@ header nav ul li a{
 .main-content p {
     font-family: 'Montserrat', sans-serif;
     color: var(--dark-brown);
+    margin-bottom: 10px;
 }
 
 .about-me, .projects, .contact-info{
@@ -124,15 +125,20 @@ header nav ul li a{
     width: 100%;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(3, 200px);
+    grid-template-rows: repeat(3, 150px);
     grid-gap: 20px;
 }
 
 .grid-card {
     background-color: var(--powderblue);
+    grid-column: span 2
     
 }
 
+.card1 {
+    grid-column: span 4;
+    grid-row: span 2;
+}
 
 
 
