--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,7 +163,7 @@ header nav ul li a:hover {
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: #008CBA;
+    background-color: var(--teal);
 }
 
 .grid-card h3 {
@@ -179,10 +179,11 @@ header nav ul li a:hover {
 .grid-card h3 {
     font-family: 'Josefin Sans', sans-serif;
     color: var(--sandstone);
+    transition: .5s ease;
 }
 
 .grid-card:hover h3 {
-    color: var(--burnt-sienna);
+    color: var(--light-coffee);
 }
 
 .grid-card:hover .overlay{
