--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@
     --powderblue: #A3C3DC;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
     width: 100%;
 }
@@ -78,23 +82,39 @@ header nav ul li a:hover {
     margin-bottom: 50px;
 }
 
+#hero img {
+    width: 300px;
+    border: 4px solid #fff;
+    border-radius: 50%;
+    box-shadow: -3px 3px 5px 0 #ccc;
+    margin-right: 10px;
+    position: absolute;
+    margin-left: 50px;
+    margin-bottom: 50px;
+    bottom: 0
+}
 
 
-
-#hero h2 {
+.subtitle {
     position: absolute;
     bottom: 0;
     right: 0;
     margin-bottom: 5%;
-    margin-right: 10%;
     background-color: var(--sandstone);
-    width: 400px;
+    width: 30%;
+    height: 80px;
     padding: 10px auto;
     text-align: center;
-    color: var(--burnt-sienna);
-    font-family: 'Josefin Sans', sans-serif;
     
 }
+
+.subtitle h2 {
+    margin-top: 20px;
+    color: var(--burnt-sienna);
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+
 
 /* Main Content Area Styling */
 
@@ -133,6 +153,7 @@ header nav ul li a:hover {
 }
 
 /* About Me Styles */
+
 
 /* My Projects Styles */
 .grid-container {
