--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,16 +39,18 @@ header {
     display: flex;
     justify-content: space-between;
     align-content: center;
-    padding: 20px 15px
+    padding: 20px 15px;
+    flex-wrap: wrap
 }
 
 header h1 {
     font-family: 'Josefin Sans', sans-serif;
-    font-size: 48px;
+    font-size: 46px;
+    width: 50%;
 }
 
 header nav {
-    width: 40%;
+    width: 50%;
     margin: auto 0px;
 }
 
@@ -57,7 +59,7 @@ header nav ul {
     justify-content: space-between;
     align-content: center;
     font-family: 'Josefin Sans', sans-serif;
-    font-size: 24px
+    font-size: 20px
 }
 
 header nav ul li a{
@@ -87,11 +89,11 @@ header nav ul li a:hover {
     border: 4px solid #fff;
     border-radius: 50%;
     box-shadow: -3px 3px 5px 0 #ccc;
-    margin-right: 10px;
     position: absolute;
     margin-left: 50px;
     margin-bottom: 50px;
-    bottom: 0
+    bottom: 0;
+    z-index: 
 }
 
 
@@ -104,12 +106,14 @@ header nav ul li a:hover {
     width: 30%;
     height: 80px;
     padding: 10px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
     
 }
 
 .subtitle h2 {
-    margin-top: 20px;
     color: var(--burnt-sienna);
     font-family: 'Josefin Sans', sans-serif;
 }
@@ -270,6 +274,17 @@ header nav ul li a:hover {
         grid-gap: 20px;
     }
     
+    header h1 {
+        font-size: 46px;
+        width: 55%;
+    }
+
+    header nav {
+        width: 45%;
+        margin: auto 0px;
+    }
+    
+    
     header nav ul li{
         font-size: 16px;
     }
@@ -283,14 +298,24 @@ header nav ul li a:hover {
     }
     
     header h1 {
-    text-align: center;
-    font-size: 32px;
+    text-align: left;
+    width: 100%
     }
     
     header nav {
         width: 100%;
         margin: auto 0px;
         justify-content: space-around;
+    }
+    
+    .subtitle {
+        height: 70px;
+        margin-bottom: 0;
+        z-index: 1
+    }
+    .subtitle h2 {
+        font-size: 20px;
+        margin: clear;
     }
     
     .about-me, .projects, .contact-info{
@@ -312,6 +337,16 @@ header nav ul li a:hover {
         flex: 0 100%;
         margin-left: 0;
         margin-top: 15px;
+    }
+        
+    #hero img {
+        bottom: none;
+        position: absolute;
+        margin-left: 0;
+        margin-bottom: 0;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index:2;
+    }
 }
-}
- 
