--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,8 @@ a {
 
 
 /* Header Styles */
+
+
 header {
     width: 100%;
     background-color: var(--dark-brown);
@@ -120,7 +122,7 @@ header nav ul li a:hover {
 
 
 
-/* Main Content Area Styling */
+/* Main Content Area Styles */
 
 .main-content {
     margin: 0 30px
@@ -156,7 +158,7 @@ header nav ul li a:hover {
     margin-left: 20px;
 }
 
-/* About Me Styles */
+
 
 
 /* My Projects Styles */
@@ -232,6 +234,8 @@ header nav ul li a:hover {
     background-image: url(../images/card4.png);
 }
 
+
+
 /* Contact Info Styles */
 
 .contact-text {
@@ -241,12 +245,12 @@ header nav ul li a:hover {
 }
 
 .contact-text p {
-    border-bottom: 3px solid var(--teal);
     font-weight: 700;
 }
 
 .contact-text a {
     color: var(--dark-brown);
+    border-bottom: 3px solid var(--teal);
 }
 
 .contact-text a:hover {
@@ -256,8 +260,8 @@ header nav ul li a:hover {
 }
 
 
-
 /* Media Query Styles */
+
 
 /* Desktop Styles */
 @media screen and (max-width: 980px) {
